# oven

./: .gitattributes  .gitignore  .gitmodules  README.md  profile_decompile.py  pyproject.toml  pytest.ini
.githooks/: post-checkout  post-commit  post-merge  pre-commit  pre-push
.github/workflows/: ci.yml
examples/: export_angel_libs.py
fixtures/: THIRD_PARTY_TEST_DEPENDENCIES.md
fixtures/abc/: AngelClientLibs.abc  Avm2Dummy.abc  Test.abc  abcdump.abc  builtin.abc
fixtures/jpexs/as3_assembled/abc/: as3_assembled-0.abc
scripts/: git_hook_pre_commit.py
src/oven/api/: __init__.py  ast_builder.py  ast_nodes.py  debug.py  decompile_to_as_files.py  decompiler.py  emitter.py  formatter.py  models.py  orchestrator.py  output.py
src/oven/api/tests/: conftest.py  test_as3fmt.py  test_debug_comments.py  test_debug_generator.py  test_decompile_abc_to_as_files.py  test_output.py
src/oven/api/transforms/: metadata.py
src/oven/avm2/: __init__.py  buffer.py  config.py  constant_pool.py  decompiler.py  enums.py  exceptions.py  file.py  instruction_formatter.py  methods.py  reader.py  report_paths.py  reporting.py  traits.py  verifier.py
src/oven/avm2/abc/: __init__.py  decoder.py  opcode_registry.py  reader.py
src/oven/avm2/decompiler/: __init__.py  class_ast.py  class_emitter.py  context.py  debug.py  engine.py  formatter.py  layout.py  lowering.py  models.py  render.py
src/oven/avm2/tests/: __init__.py  abc_testkit.py  conftest.py  test_abc_file_api.py  test_abc_parser_fuzz.py  (+25 more)
src/oven/cli/: __init__.py  __main__.py
src/oven/core/: __init__.py  pipeline.py
(+134 files in other folders)
