[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oven"
version = "0.1.0"
description = "AVM2 / ABC parsing and decompilation toolkit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    'typing_extensions>=4.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-html>=4.1",
    "pytest-xdist>=3.6",
]

[project.scripts]
oven = "oven.cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oven = ["py.typed"]

[tool.mypy]
python_version = "3.10"
files = ["src/oven"]
mypy_path = "src"
strict = true
show_error_codes = true
pretty = true
